[package]
name = "libloadviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
# Ref: https://crates.io/crates/cargo-xcode
crate-type = ["lib", "staticlib"]

[build-dependencies]
cbindgen = "0.24.3"
