[package]
name = "libloadviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.146"
opaque-pointer = "0.8.8"

[lib]
# Ref: https://crates.io/crates/cargo-xcode
crate-type = ["lib", "staticlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rendering"
harness = false
