[package]
name = "libloadviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.146"
opaque-pointer = "0.8.8"
bracket-noise = "~0.8"

[dependencies.libwebp-sys2]
version = "0.1.7"
features = ["1_2", "mux"]

[lib]
# Ref: https://crates.io/crates/cargo-xcode
crate-type = ["lib", "staticlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
criterion = "0.5"

# See: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
debug = 1  # 1 = Line number information only

# Ref:
# https://github.com/walles/riff/blob/432c0b08523818e461eded0407a009db2e795996/Cargo.toml#L48-L54
lto = "thin"

[[bench]]
name = "rendering"
harness = false
